[package]
name = "sylph"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puruspe = "0.2.0"
thiserror = "1.0"
itertools = "*"
needletail = "*"
simple_logger=  { version = "3", features = ["stderr"] }
log = "*"
rayon = "*"
smallvec = { version = "*", features = ["union","serde","write"] }
serde = { version = "*", features = ["derive"] }
bincode = "*"
tikv-jemallocator = "*"
seq_io = "*"
fxhash = "*"
nohash = "*"
clap = { version = "3", features = ["derive"] }
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
rustc-hash="*"
#nlopt="*"
statrs="*"
nalgebra="*"
rand = "*"
regex = "1"
fastrand = "*"
workctl = "*"


[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1"
serial_test = "*"


[profile.release]
panic = "abort"
lto = true

[profile.dev]
#opt-level = 1
opt-level = 3

#[rust]
#debuginfo-level = 1
